Fix spacing for <section> elements in themes that add formatting for them

--- a/assets/css/frontend/sensei.scss
+++ b/assets/css/frontend/sensei.scss
@@ -63,6 +63,14 @@ a.sensei-certificate-link {
   text-decoration: none;
 }
 
+/* Spacing defaults */
+
+.sensei {
+	section {
+		padding: 0;
+	}
+}
+
 /* Courses */
 .course,
 .course-container,
